# hkd

./: .travis.yml  CHANGELOG.md  hkd.cabal
.github/workflows/: haskell-ci.yml
example/: NP.hs  Record.hs  example-issue-12.hs
src/Data/: HKD.hs
src/Data/Functor/: Confusing.hs
src/Data/HKD/: Day.hs  Yoneda.hs
