cabal-version: 2.2
name: hkd
version: 0
synopsis: "higher-kinded data"
description:
  "Higher-kinded data" utilities.
homepage: https://github.com/ekmett/codex/tree/master/hkd#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
tested-with:   GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.1

source-repository head
  type: git
  location: https://github.com/ekmett/adjunctions
  subdir: hkd

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall

  if impl(ghc >= 8.0)
    ghc-options: -Wno-trustworthy-safe
  if impl(ghc >= 8.4)
    ghc-options:
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -Wmissing-export-lists


  build-depends:
   base       >= 4.6     && < 5

  if !impl(ghc >= 7.10)
    build-depends: transformers >= 0.3 && < 0.6

  if !impl(ghc >= 8.0)
    build-depends: semigroups >= 0.18.5  && < 1

  if !impl(ghc >= 7.8)
    build-depends: tagged >= 0.8.5     && < 1
  exposed-modules:
    Data.HKD
